robot  Ajoute: br, ceb, ilo, lv, nap, pam, sw, ta, te, war Modifie: scn, vi

--- a/Sánzá_ya_zómi_na_míbalé.mw
+++ b/Sánzá_ya_zómi_na_míbalé.mw
@@ -1,4 +1,94 @@
-[[af:Desember]] [[ang:Gēolmōnaþ]] [[ar:ديسمبر]] [[an:Abiento]] [[ast:Avientu]] [[bg:Декември]] [[be:Сьнежань]] [[bs:Decembar]] [[ca:Desembre]] [[cv:Раштав]] [[cs:Prosinec]] [[cy:Rhagfyr]] [[da:December]] [[de:Dezember]] [[et:Detsember]] [[el:Δεκέμβριος]] [[als:Dezember]] [[en:December]] [[es:Diciembre]] [[eo:Decembro]] [[eu:Abendu]] [[fa:دسامبر]] [[fo:Desember]] [[fr:décembre]] [[fy:Desimber]] [[fur:Dicembar]] [[ga:Nollaig]] [[gl:Decembro]] [[ko:12월]] [[hr:Prosinac]] [[io:Decembro]] [[id:Desember]] [[ia:Decembre]] [[ie:Decembre]] [[is:Desember]] [[it:Dicembre]] [[he:דצמבר]] [[jv:Desember]] [[kn:ಡಿಸೆಂಬರ್]] [[ka:დეკემბერი]] [[csb:Gòdnik]] [[kw:Mys Kevardhu]] [[ku:Berfanbar]] [[la:December]] [[lt:Gruodis]] [[lb:Dezember]] [[li:December]] [[hu:December]] [[mi:Hakihea]] [[mr:डिसेंबर]] [[ms:Disember]] [[nl:December]] [[ja:12月]] [[no:Desember]] [[nn:Desember]] [[oc:Decembre]] [[pl:Grudzień]] [[pt:Dezembro]] [[ro:Decembrie]] [[ru:Декабрь]] [[se:Juovlamánnu]] [[sco:December]] [[sq:Dhjetori]] [[scn:Dicemmiru]] [[simple:December]] [[sk:December]] [[sl:December]] [[sr:Децембар]] [[fi:Joulukuu]] [[sv:December]] [[tl:Disyembre]] [[tt:Dekäber]] [[th:ธันวาคม]] [[vi:Tháng 12]] [[tpi:Disemba]] [[tr:Aralık]] [[uk:Грудень]] [[ur:دسمبر]] [[vo:Dekul]] [[wa:Decimbe]] [[zh:12月]]
-
 {{sánzá}}
 {{Sánzá ya zómi na míbalé}}
+
+[[af:Desember]]
+[[als:Dezember]]
+[[an:Abiento]]
+[[ang:Gēolmōnaþ]]
+[[ar:ديسمبر]]
+[[ast:Avientu]]
+[[be:Сьнежань]]
+[[bg:Декември]]
+[[br:Kerzu]]
+[[bs:Decembar]]
+[[ca:Desembre]]
+[[ceb:Disyembre]]
+[[cs:Prosinec]]
+[[csb:Gòdnik]]
+[[cv:Раштав]]
+[[cy:Rhagfyr]]
+[[da:December]]
+[[de:Dezember]]
+[[el:Δεκέμβριος]]
+[[en:December]]
+[[eo:Decembro]]
+[[es:Diciembre]]
+[[et:Detsember]]
+[[eu:Abendu]]
+[[fa:دسامبر]]
+[[fi:Joulukuu]]
+[[fo:Desember]]
+[[fr:Décembre]]
+[[fur:Dicembar]]
+[[fy:Desimber]]
+[[ga:Nollaig]]
+[[gl:Decembro]]
+[[he:דצמבר]]
+[[hr:Prosinac]]
+[[hu:December]]
+[[ia:Decembre]]
+[[id:Desember]]
+[[ie:Decembre]]
+[[ilo:Deciembre]]
+[[io:Decembro]]
+[[is:Desember]]
+[[it:Dicembre]]
+[[ja:12月]]
+[[jv:Desember]]
+[[ka:დეკემბერი]]
+[[kn:ಡಿಸೆಂಬರ್]]
+[[ko:12월]]
+[[ku:Berfanbar]]
+[[kw:Mys Kevardhu]]
+[[la:December]]
+[[lb:Dezember]]
+[[li:December]]
+[[lt:Gruodis]]
+[[lv:Decembris]]
+[[mi:Hakihea]]
+[[mr:डिसेंबर]]
+[[ms:Disember]]
+[[nap:Dicembre]]
+[[nl:December]]
+[[nn:Desember]]
+[[no:Desember]]
+[[oc:Decembre]]
+[[pam:Disiembri]]
+[[pl:Grudzień]]
+[[pt:Dezembro]]
+[[ro:Decembrie]]
+[[ru:Декабрь]]
+[[scn:Dicèmmiru]]
+[[sco:December]]
+[[se:Juovlamánnu]]
+[[simple:December]]
+[[sk:December]]
+[[sl:December]]
+[[sq:Dhjetori]]
+[[sr:Децембар]]
+[[sv:December]]
+[[sw:Desemba]]
+[[ta:டிசம்பர்]]
+[[te:డిసెంబర్]]
+[[th:ธันวาคม]]
+[[tl:Disyembre]]
+[[tpi:Disemba]]
+[[tr:Aralık]]
+[[tt:Dekäber]]
+[[uk:Грудень]]
+[[ur:دسمبر]]
+[[vi:Tháng mười hai]]
+[[vo:Dekul]]
+[[wa:Decimbe]]
+[[war:Disyembre]]
+[[zh:12月]]
