+da, +es, +fi, +kg, +ko, +ln, +nl, Modifying: ja

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -19,9 +19,15 @@
 
 {{InterWiki|left|code=kg}}
 
-[[ast:llingua congo]]
+[[ast:Llingua congo]]
+[[da:Kikongo]]
 [[en:Kongo language]]
-[[ja:コンゴ王国]]
+[[es:Kikongo]]
+[[fi:Kongon kieli]]
+[[fr:Kikongo]]
+[[ja:コンゴ語]]
+[[kg:Kikongo]]
+[[ko:콩고어]]
+[[nl:Kikongo]]
 [[pl:Język kongo]]
-[[fr:kikongo]]
 [[pt:Quicongo]]
