*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -501,6 +501,7 @@ __NOTOC__
 [[Category:Almwali]]
 
 [[en:Gallery of sovereign state coats of arms]]
+[[es:Galería de escudos de estados soberanos]]
 [[fr:Galerie des emblèmes des pays du monde]]
 [[he:גלריית סמלי מדינות העולם]]
 [[it:Elenco di stemmi nazionali]]
