--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -59,3 +59,4 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 [[en:Heads of state of the Democratic Republic of the Congo]]
 [[fr:Liste des présidents de la République démocratique du Congo]]
 [[id:Presiden Republik Demokratik Kongo]]
+[[sv:Lista över Demokratiska republiken Kongos presidenter]]
