--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -32,7 +32,7 @@
 [[de:Flagge der Demokratischen Republik Kongo]]
 [[en:Flag of the Democratic Republic of the Congo]]
 [[es:Bandera de la República Democrática del Congo]]
-[[et:Kongo DV lipp]]
+[[et:Kongo Demokraatliku Vabariigi lipp]]
 [[fi:Kongon demokraattisen tasavallan lippu]]
 [[fr:Drapeau de la République démocratique du Congo]]
 [[he:דגל הרפובליקה הדמוקרטית של קונגו]]
