robot  Ajoute: ca, eu

--- a/Ebimiselo.mw
+++ b/Ebimiselo.mw
@@ -5,6 +5,7 @@
 [[ar:طابعة]]
 [[br:Moullerez]]
 [[bs:Printer]]
+[[ca:Impressora]]
 [[cs:Tiskárna (počítačová)]]
 [[da:Printer]]
 [[de:Drucker (Peripheriegerät)]]
@@ -12,6 +13,7 @@
 [[eo:Printilo]]
 [[es:Impresora]]
 [[et:Printer]]
+[[eu:Inprimagailu]]
 [[fa:چاپگر]]
 [[fi:Tulostin]]
 [[fr:Imprimante]]
