robot  Ajoute: vi

--- a/Wikitravel.mw
+++ b/Wikitravel.mw
@@ -40,4 +40,5 @@ Wikitravel esalemi na nkotá mingi. Ekútánémi na nkóta motpba (6).  Pona kot
 [[ro:Wikitravel]]
 [[ru:Wikitravel]]
 [[sv:Wikitravel]]
+[[vi:Wikitravel]]
 [[zh:Wikitravel]]
