--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -47,11 +47,13 @@
 [[lt:Džordžas V. Bušas]]
 [[ms:George W. Bush]]
 [[nds:George W. Bush]]
+[[nds-nl:George Walker Bush]]
 [[nl:George Walker Bush]]
 [[nn:George W. Bush]]
 [[no:George W. Bush]]
 [[oc:George Walker Bush]]
 [[pam:George W. Bush]]
+[[pdc:George W. Bush]]
 [[pl:George W. Bush]]
 [[ps:جورج ډبليو بوش]]
 [[pt:George W. Bush]]
