robot  Ajoute: nrm, rmy

--- a/Irlandí_ya_Nola.mw
+++ b/Irlandí_ya_Nola.mw
@@ -33,9 +33,11 @@
 [[nl:Noord-Ierland]]
 [[nn:Nord-Irland]]
 [[no:Nord-Irland]]
+[[nrm:Irlande du Nord]]
 [[pl:Irlandia Północna]]
 [[pt:Irlanda do Norte]]
 [[rm:Irlanda dal Nord]]
+[[rmy:Nordutno Irland]]
 [[ro:Irlanda de Nord]]
 [[ru:Северная Ирландия]]
 [[sco:Northren Ireland]]
