robot  Ajoute: mk, oc, th Modifie: nl

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -357,12 +357,14 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[li:Kongo (Kinshasa)]]
 [[lt:Kongo Demokratinė Respublika]]
 [[lv:Kongo DR]]
+[[mk:Конго, Демократска Република]]
 [[ms:Republik Demokratik Congo]]
 [[na:Republik Engame Congo]]
 [[nds:Demokraatsche Republiek Kongo]]
-[[nl:Democratische Republiek Congo]]
+[[nl:Congo-Kinshasa]]
 [[nn:Kongo]]
 [[no:Den demokratiske republikken Kongo]]
+[[oc:Republica Democratica del Congò]]
 [[pl:Demokratyczna Republika Konga]]
 [[pt:República Democrática do Congo]]
 [[ru:Демократическая Республика Конго]]
@@ -373,6 +375,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[sq:Republika Demokratike e Kongos]]
 [[sv:Demokratiska republiken Kongo]]
 [[sw:Jamhuri ya Kidemokrasia ya Kongo]]
+[[th:สาธารณรัฐประชาธิปไตยคองโก]]
 [[tl:Demokratikong Republika ng Congo]]
 [[tr:Demokratik Kongo Cumhuriyeti]]
 [[uk:Конго, Демократична Республіка]]
