--- a/Falansé.mw
+++ b/Falansé.mw
@@ -31,6 +31,7 @@
 [[fa:زبان فرانسوی]]
 [[fi:Ranskan kieli]]
 [[fr:Français]]
+[[frp:Francês]]
 [[ga:Fraincis]]
 [[gl:Lingua francesa]]
 [[he:צרפתית]]
@@ -45,6 +46,7 @@
 [[it:Lingua francese]]
 [[iu:ᐅᐃᕖᑎᑐᑦ]]
 [[ja:フランス語]]
+[[jbo:fasybau]]
 [[ka:ფრანგული ენა]]
 [[ko:프랑스어]]
 [[ku:Zimanê fransî]]
