robot  Ajoute: tet

--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -170,6 +170,7 @@ Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, t
 [[sl:Splošna deklaracija človekovih pravic]]
 [[sq:Deklarata e Përgjithshme mbi të Drejtat e Njeriut]]
 [[sv:FN:s deklaration om de mänskliga rättigheterna]]
+[[tet:Deklarasaun Universál Direitus Umanus Nian]]
 [[vi:Tuyên ngôn Quốc tế Nhân quyền]]
 [[zh:世界人权宣言]]
 [[zh-min-nan:Sè-kài Jîn-koân Soan-giân]]
