robot  Ajoute: mk

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -79,6 +79,7 @@ footnotes 	= |
 [[lb:Namibien]]
 [[lt:Namibija]]
 [[lv:Namībija]]
+[[mk:Намибија]]
 [[mr:नामिबिया]]
 [[ms:Namibia]]
 [[nds:Namibia]]
