--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -18,6 +18,7 @@
 [[af:Pous Benedictus XVI]]
 [[ar:بينيدكت السادس عشر]]
 [[ast:Benedictu XVI]]
+[[be:Бэнэдыкт XVI (папа рымскі)]]
 [[bg:Бенедикт XVI]]
 [[bs:Benedikt XVI.]]
 [[ca:Benet XVI]]
