robot  Ajoute: nds-nl, oc

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -109,9 +109,11 @@ footnotes     = |
 [[ms:Switzerland]]
 [[nap:Sguizzera]]
 [[nds:Swiez]]
+[[nds-nl:Zwitserlaand]]
 [[nl:Zwitserland]]
 [[nn:Sveits]]
 [[no:Sveits]]
+[[oc:Soïssa]]
 [[pdc:Schweiz]]
 [[pl:Szwajcaria]]
 [[pt:Suíça]]
