robot  Ajoute: frp, mr, nrm, yi Modifie: na

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -40,6 +40,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[fj:Wikipedia]]
 [[fo:Wikipedia]]
 [[fr:Wikipédia]]
+[[frp:Vouikipèdia]]
 [[fur:Vichipedie]]
 [[ga:Vicipéid]]
 [[gl:Wikipedia]]
@@ -76,9 +77,10 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[mk:Википедија]]
 [[ml:വിക്കിപീഡിയ]]
 [[mo:Википедия]]
+[[mr:विकिपीडिआ]]
 [[ms:Wikipedia]]
 [[mt:Wikipedija]]
-[[na:Wikipediya]]
+[[na:Wikipedia]]
 [[nah:Wikipedia]]
 [[nds:Wikipedia]]
 [[nds-nl:Wikipedia]]
@@ -86,6 +88,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[nl:Wikipedia]]
 [[nn:Wikipedia]]
 [[no:Wikipedia]]
+[[nrm:Viqùipédie]]
 [[oc:Oiquipedià]]
 [[os:Википеди]]
 [[pl:Wikipedia]]
@@ -120,6 +123,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[vi:Wikipedia]]
 [[wa:Wikipedia]]
 [[war:Wikipedia]]
+[[yi:‫װיקיפּעדיע]]
 [[zh:维基百科]]
 [[zh-min-nan:Wikipedia]]
 [[zh-yue:維基百科]]
