--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -242,9 +242,9 @@ __NOTOC__
 |-
 | [[Latvia]] || [[Image:Latvijas lielais gerbonis.gif|140px]]
 |-
-| [[Lebanon]] || [[Image:Lebanese_COA.png|120px|Lebanese COA]]
+| [[Lebanon]] || [[Image:Lebanon coa.png|120px|Lebanese COA]]
 |-
-| [[Lesotho]] || [[Image:Lesothoarms22.PNG|120px]]
+| [[Lesotho]] || [[Image:Lesotho coa.png|120px]]
 |-
 | [[Liberia]] || [[Image:Lib-coa.png|120px]]
 |-
