--- a/Nkɔ́li.mw
+++ b/Nkɔ́li.mw
@@ -5,3 +5,21 @@
 
 
 [[Category:Nyama]]
+
+[[da:Krokodille]]
+[[de:Echte Krokodile]]
+[[en:Crocodile]]
+[[es:Crocodylidae]]
+[[fi:Krokotiilit]]
+[[he:תנין]]
+[[id:Buaya]]
+[[io:Krokodilo]]
+[[la:Crocodylidae]]
+[[lv:Krokodils]]
+[[nl:Krokodillen]]
+[[no:Krokodiller]]
+[[pl:Krokodylowe]]
+[[pt:Crocodilo]]
+[[sv:Krokodiler]]
+[[tl:Buwaya]]
+[[vi:Cá sấu]]
