--- a/Mbuma.mw
+++ b/Mbuma.mw
@@ -1,3 +1,5 @@
+[[Image:La Boqueria.JPG|250px|right|thumb|xyz]]
+[[Image:Fruit_Stall_in_Barcelona_Market.jpg|250px|right|thumb|xyz]]
 {{lingála tɛ́}}
 Ici manque un article sur les fruits en générale.
 
@@ -15,3 +17,23 @@ La liste des fruits n'est que temporairement ici. Elle sera éffacé d'ici peu. 
 
 [[Category:Zardɛ]]
 [[Category:Boyebi milona]]
+
+[[ca:Fruit]]
+[[cy:Ffrwyth]]
+[[da:Frugt]]
+[[de:Obst]]
+[[en:Fruit]]
+[[es:Fruta]]
+[[eo:Frukto]]
+[[io:Frukto]]
+[[it:Frutto]]
+[[lt:Vaisius]]
+[[nds:Frücht]]
+[[nl:Fruit]]
+[[ja:果物]]
+[[pl:Owoc]]
+[[simple:Fruit]]
+[[sl:Sadje]]
+[[sv:Frukt]]
+[[zh-cn:水果]]
+[[zh-tw:水果/繁]]
