--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -94,7 +94,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[pl:Wikipedia]]
 [[pt:Wikipédia]]
 [[qu:Wikipidiya]]
-[[rmy:Wikipidiya]]
+[[rmy:Vikipidiya]]
 [[ro:Wikipedia]]
 [[roa-rup:Uichipedia]]
 [[ru:Википедия]]
