*Empty MediaWiki Message*

--- a/Mombɔ́ngɔ.mw
+++ b/Mombɔ́ngɔ.mw
@@ -1,2 +1,4 @@
 {{ndámbo}}
-&rarr; [http://www.presse-francophone.org/apfa/Langues/Lingala.htm]
+
+==Nkásá o libándá==
+&rarr;  http://www.presse-francophone.org/apfa/Langues/Lingala.htm (lingála–lifalansé)
