--- a/Mombɔ́ngɔ.mw
+++ b/Mombɔ́ngɔ.mw
@@ -2,3 +2,5 @@
 
 ==Nkásá o libándá==
 &rarr;  http://www.presse-francophone.org/apfa/Langues/Lingala.htm (lingála–lifalansé)
+
+[[category:libóta]]
