--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -1,4 +1,5 @@
 [[category:lisangá]]
+[[category:politiki]]
 {{ndámbo}}
 
 '''Demokrasi''' liutí na maloba mabale ma [[ligresi]] : ''δήμος'' ''demos'' elingí koloba bína ba ekólo; mpé  ''κράτος'' ''kratos'' elingí koloba bokonzi. Demokrasi elingí bongo koloba bokonzi o maboko o [[bǎna mbóka]] mpé mpó ya bolámu ya bangó.
