*Empty MediaWiki Message*

--- a/Kominisimɛ.mw
+++ b/Kominisimɛ.mw
@@ -1,6 +1,7 @@
 {{ndambo}}
 
 [[category:lisangá]]
+[[category:politiki]]
 [[Image:162 6220.jpg|thumb|Lenin, 1870 - 1924 (Vladimir Iljitch Uljanov)]]
 
 '''Komynisimɛ''' ezalí [[politiki]] ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
