--- a/Sosialisimɛ.mw
+++ b/Sosialisimɛ.mw
@@ -5,3 +5,48 @@
 [[Image:Hw-marx.jpg|thumb|Karl Marx, 1818 - 1883]]
 
 '''Sosialisimɛ''' ezalí [[politiki]] ékopesa matomba ya mosala na mabɔrɔ ya basali bangó mɔkɔ mpe ékopekisa bokulaka ézala ya mwá liboke ya bato.
+
+
+
+[[ast:Socialismu]]
+[[ca:Socialisme]]
+[[cs:Socialismus]]
+[[da:Socialisme]]
+[[de:Sozialismus]]
+[[en:Socialism]]
+[[eo:Socialismo]]
+[[es:Socialismo]]
+[[et:Sotsialism]]
+[[eu:Sozialismo]]
+[[fa:سوسیالیسم]]
+[[fi:Sosialismi]]
+[[gl:Socialismo]]
+[[he:סוציאליזם]]
+[[hr:Socijalizam]]
+[[hu:Szocializmus]]
+[[id:Sosialisme]]
+[[is:Jafnaðarstefna]]
+[[it:Socialismo]]
+[[ja:社会主義]]
+[[ko:사회주의]]
+[[lt:Socializmas]]
+[[mk:Социјализам]]
+[[ms:Sosialisme]]
+[[nl:Socialisme]]
+[[nn:Sosialisme]]
+[[no:Sosialisme]]
+[[pl:Socjalizm]]
+[[pt:Socialismo]]
+[[ro:Socialism]]
+[[ru:Социализм]]
+[[scn:Sucialismu]]
+[[sco:Socialism]]
+[[sh:Socijalizam]]
+[[simple:Socialism]]
+[[sl:Socializem]]
+[[sr:Социјализам]]
+[[sv:Socialism]]
+[[tr:Sosyalizm]]
+[[uk:Соціалізм]]
+[[zh:社会主义]]
+[[zh-min-nan:Siā-hoē-chú-gī]]
