--- a/Kapitalismɛ.mw
+++ b/Kapitalismɛ.mw
@@ -3,3 +3,43 @@
 {{ndambo}}
 
 [[Politiki]] ya '''kapitalismɛ''' elingí koloba politiki wapi bokulaka mpe matomba ya mosala mazalí mpɔ na basali tɛ kasi mazalí mpɔ na bomongo ya bokulaka babéngaka bango bakapitalistɛ elingí koloba bakóló-bokulaka mosɔlɔ.
+
+
+[[ar:رأسمالية]]
+[[bg:Капитализъм]]
+[[ca:Capitalisme]]
+[[cs:Kapitalismus]]
+[[da:Kapitalisme]]
+[[de:Kapitalismus]]
+[[en:Capitalism]]
+[[eo:Kapitalismo]]
+[[es:Capitalismo]]
+[[et:Kapitalism]]
+[[eu:Kapitalismo]]
+[[fa:سرمایه‌داری]]
+[[fi:Kapitalismi]]
+[[gl:Capitalismo]]
+[[he:קפיטליזם]]
+[[hu:Kapitalizmus]]
+[[id:Kapitalisme]]
+[[it:Capitalismo]]
+[[ja:資本主義]]
+[[ko:자본주의]]
+[[lt:Kapitalizmas]]
+[[mk:Капитализам]]
+[[nl:Kapitalisme]]
+[[nn:Kapitalisme]]
+[[no:Kapitalisme]]
+[[pl:Kapitalizm]]
+[[pt:Capitalismo]]
+[[ru:Капитализм]]
+[[scn:Capitalismu]]
+[[simple:Capitalism]]
+[[sk:Kapitalizmus]]
+[[sl:Kapitalizem]]
+[[sv:Kapitalism]]
+[[th:ทุนนิยม]]
+[[tr:Kapitalizm]]
+[[uk:Капіталізм]]
+[[vi:Chủ nghĩa tư bản]]
+[[zh:资本主义]]
