--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -12,7 +12,7 @@ __NOTOC__
 |-
 | [[Aljeria]] || [[Image:Algeria_coa.png|120px]]
 |-
-| [[Alémani]] || [[Image:Bundesadler.png|120px]]<br><small>the ''[[Bundesadler]]'' (Federal Eagle)</small>
+| [[Alémani]] || [[Image:Coat of Arms of Germany.svg|120px]]<br><small>the ''[[Bundesadler]]'' (Federal Eagle)</small>
 |-
 | [[Al Mamlaká al-Maghribiya]] || [[Image:morarms22.PNG|120px]]
 |-
