*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -2,7 +2,7 @@
 nkómbó               = Rebubliki Fedelali ya Alémani |
 nkómbó_na_lokóta     = Bundesrepublik Deutschland |
 image_flag           = Flag of Germany.svg|140px |
-image_coat           = Bundesadler.png|85px |
+image_coat           = Coat of Arms of Germany.svg|85px |
 image_map            = LocationGermanyInEurope.png|none|320px |
 mokáno               = (none)|
 loyémbo              = [[...]] (Einigkeit und Recht und Freiheit) |
