Ingɛlɛ́tɛlɛ>Ingɛlandi

--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -2,7 +2,7 @@
 
 {{Infobox Esé|
 nkómbó_na_lokóta = England |
-nkómbó = Ingɛlɛ́tɛlɛ |
+nkómbó = Ingɛlandi |
 image_flag = Flag_of_England.svg|170px|
 image_coat = England.gif|100px|
 image_map = Map of England within the United Kingdom.png |
