img (les Légendes marquées d'un * sont à revoir [anglais/lingála])

--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -46,12 +46,88 @@ footnotes = <sup>1</sup>In the UK, [[Nkotá ya Ingɛlɛ́tɛlɛ|some other langu
 <br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
 
 == Historia ==
+[[Image:Bayeuxtap1.jpg|thumb|200px|right|*Norman conquest of Ingɛlandi as depicted in the [[Bayeux Tapestry]]]]
+[[Image:Elizabeth I (Ermine Portrait).jpg|thumb|175px|right|[[Elizabeth I ya Ingɛlandi|Mani Elizabeth I]]]]
+
 == Politiki ==
+
 == Subdivisions ==
+{| border=0 cellpadding="2" cellspacing="0"
+|--------
+|valign=top |
+{| cellpadding=0 cellspacing=0
+|valign=top align=left|
+<small>
+<ol>
+<li>[[Northumberland]]
+<li>[[Tyne and Wear]]
+<li>[[County Durham|Durham]]
+<li>[[Cumbria]]
+<li>[[Lancashire]]
+<li>[[North Yorkshire]]
+<li>[[East Riding of Yorkshire]]
+<li>[[South Yorkshire]]
+<li>[[West Yorkshire]]
+<li>[[Greater Manchester]]
+<li>[[Merseyside]]
+<li>[[Cheshire]]
+<li>[[Derbyshire]]
+<li>[[Nottinghamshire]]
+<li>[[Lincolnshire]]
+<li>[[Rutland]]
+<li>[[Leicestershire]]
+<li>[[Staffordshire]]
+<li>[[Shropshire]]
+<li>[[Herefordshire]]
+<li>[[Worcestershire]]
+<li>[[West Midlands (county)|West Midlands]]
+<li>[[Warwickshire]]
+</ol>
+</small>
+|valign=top|<small>
+<ol start=24>
+<li>[[Northamptonshire]]
+<li>[[Cambridgeshire]]
+<li>[[Norfolk]]
+<li>[[Suffolk]]
+<li>[[Essex, England|Essex]]
+<li>[[Hertfordshire]]
+<li>[[Bedfordshire]]
+<li>[[Buckinghamshire]]
+<li>[[Oxfordshire]]
+<li>[[Gloucestershire]]
+<li>[[Bristol]]
+<li>[[Somerset]]
+<li>[[Wiltshire]]
+<li>[[Berkshire]]
+<li>[[Greater London]]
+<li>[[Kent]]
+<li>[[East Sussex]]
+<li>[[West Sussex]]
+<li>[[Surrey]]
+<li>[[Hampshire]]
+<li>[[Isle of Wight]]
+<li>[[Dorset]]
+<li>[[Devon]]
+<li>[[Cornwall]]
+</ol></small>
+|[[Image:EnglandCountiesCere.png]]
+|-
+|colspan=3|<small>''*Not shown'': [[City of London]]
+|}
+|}
 == Jyografi ==
+[[Image:United Kingdom Satellite Image.JPG|thumb|right|*A satellite view ya Ingɛlandi mpé [[Ekólo Wali]].]]
+
 == Économie ==
 == Démographie ==
 == Culture ==
+[[Image:Shakespeare.jpg|thumb|right|[[William Shakespeare]].]]
+
+==Lokótá==
+[[Image:Beowulf.firstpage.jpeg|thumb|right|*[[Beowulf]] is one of the oldest surviving epic poems in what is identifiable as a form [[lingɛlɛ́sa]].]]
+[[Lingɛlɛ́sa]] ezalí [[lokótá]] ba Ingɛlandi .
+
 == Tála mpé ==
 == Nkásá o libándá ==
 
