--- a/Lingála.mw
+++ b/Lingála.mw
@@ -110,6 +110,7 @@ Comment améliorer un article sur une langue?
 [[fi:Lingala]]
 [[fr:Lingala]]
 [[ja:リンガラ語]]
+[[kg:Lingala]]
 [[ko:링갈라어]]
 [[nl:Lingala]]
 [[pt:Lingala]]
