--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -133,4 +133,5 @@ Comment améliorer un article sur une langue?
 [[es:Idioma tshiluba]]
 [[fi:Luban kieli]]
 [[fr:Tchiluba]]
+[[kg:Kituba]]
 [[ko:루바어]]
