Reverted edit of Bombo, changed back to last version by Superzerocool

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -47,7 +47,7 @@
 |-
 |colspan="2" align="center" | <center>[[image:Map_-_DR_Congo%2C_major_languages.svg|299px|Karte von {{{NAME_ORT}}}]]</center>
 |}
-'''Ciluba''' (mpé '''Luba-Kasai''' mpé '''Luba-Lulua''') ezali [[lokótá]] na bato na [[Kasaï]] na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]].
+Ciluba ezali [[lokótá]] na bato na [[Kasaï]] na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]].
 <!--
 ==History==
 Probable history of the language. What language(s) it is derived from. Dates of movement of major groups of speakers, etc.
@@ -133,5 +133,4 @@ Comment améliorer un article sur une langue?
 [[es:Idioma tshiluba]]
 [[fi:Luban kieli]]
 [[fr:Tchiluba]]
-[[kg:Kituba]]
 [[ko:루바어]]
