--- a/Falansé.mw
+++ b/Falansé.mw
@@ -1,4 +1,4 @@
-[[image:Francais-World.png|thumb|right|description]]
+[[Image:Map-Francophone World.png|center|300px|description]]
 
 '''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Kébeki]] na [[Afríka]].
 
@@ -48,6 +48,7 @@
 [[ja:フランス語]]
 [[jbo:fasybau]]
 [[ka:ფრანგული ენა]]
+[[kg:Kifalanse]]
 [[ko:프랑스어]]
 [[ku:Zimanê fransî]]
 [[kw:Frynkek]]
