--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -79,7 +79,7 @@ __NOTOC__
 |-
 | [[Chile]] || [[Image:Shield_cl.gif|120px]]
 |-
-| [[People's Republic of China]] || [[Image:PRC coa.png|120px]]
+| [[People's Republic of China]] || [[Image:China guohui.png|120px]]
 |-
 | [[Colombia]] || [[Image:Colombia_coa.png|120px]]
 |-
