--- a/Politíki.mw
+++ b/Politíki.mw
@@ -32,6 +32,7 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 [[ast:Política]]
 [[bg:Политика]]
 [[bn:রাজনীতি]]
+[[br:Politikerezh]]
 [[bs:Politika]]
 [[ca:Política]]
 [[cs:Politika]]
@@ -44,21 +45,30 @@ Nzela ya misato, [[komynisimɛ]] ezalí politiki ékosenga bokulaka mpe matomba 
 [[fa:سیاست]]
 [[fi:Politiikka]]
 [[fr:Politique]]
+[[fur:Politiche]]
 [[ga:Polaitíocht]]
 [[gl:Política]]
 [[he:פוליטיקה]]
 [[hr:Politika]]
+[[hu:Politika]]
 [[ia:Politica]]
+[[id:Politik]]
+[[io:Politiko]]
 [[it:Politica]]
 [[ja:政治]]
+[[ka:პოლიტიკა]]
+[[ko:정치]]
 [[la:Politica]]
 [[lb:Politik]]
+[[li:Polletiek]]
 [[ms:Politik]]
 [[nds:Politik]]
 [[nl:Politiek]]
 [[no:Politikk]]
 [[pl:Polityka]]
 [[pt:Política]]
+[[sc:Polìtica]]
+[[scn:Pulitica]]
 [[simple:Politics]]
 [[sv:Politik]]
 [[sw:Siasa]]
