*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -42,6 +42,11 @@ footnotes     =  |
 
 
 '''Alémani''' ezalí [[esé]] o ntéi ya [[Eropa]].
+
+=== Nkásá o libándá ===
+* {{en}} [http://www.germanygate.com Germany] - Portail de Alémani
+
+
 {{ndámbo}}
 
 
