--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -1,3 +1,4 @@
+[[Image:Bible.malmesbury.arp.jpg|right|450px|]]
 *[[Genese]] 
 *[[Exode]] 
 *[[Yobo]] 
@@ -9,11 +10,11 @@
 *[[Yilimiya]]
 *[[Danyele]]
 *[[Mosakoli]] 
-*Ezekiele
-*Emoniseli
-*Matai
-*Luka
-*Yoane
+*[[Ezekiele]]
+*[[Emoniseli]]
+*[[Matai]]
+*[[Luka]]
+*[[Yoane]]
 *1 Timote
 *2 Timote
 *1 Petelo
