*Empty MediaWiki Message*

--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -15,10 +15,10 @@
 *[[Matai]]
 *[[Luka]]
 *[[Yoane]]
-*1 Timote
-*2 Timote
-*1 Petelo
-*2 Petelo
+*[[1 Timote]]
+*[[2 Timote]]
+*[[1 Petelo]]
+*[[2 Petelo]]
 *[[Yakobo]] 
 *[[Bagalatia]]
 *[[Batesaloniki]]
