--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -1,4 +1,5 @@
-{{9yanuari}}
+__NOTOC__<!-- -->__NOEDITSECTION__<!--
+-->{{9yanuari}}
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 
 {{Lonkásá ya libosó/Mbɔ́tɛ}}
@@ -24,10 +25,50 @@
 '''«[[Special:Allpages|Allpages]]»''' &nbsp; – &nbsp; [[Special:Categories|ekákoli par catégorie]] &nbsp; – &nbsp; [[Special:Newpages|ekakoli ya sika]] &nbsp; – &nbsp; [[Special:Wantedpages|ekakoli manquants]]  &nbsp; – &nbsp; [[Wikipedia_themes|par thèmes]]</div>
 </div>
 
+==Other African-language Wikipedias that are not among large ones==
+[[:aa:|Afar]]&nbsp;·
+[[:af:|Afrikaans]]&nbsp;·
+[[:ak:|Akan]]&nbsp;·
+[[:am:|አማርኛ]]&nbsp;·
+[[:bm:|Bamanankan]]&nbsp;·
+[[:ny:|Chi-Chewa]]&nbsp;·
+[[:sn:|chiShona]]&nbsp;·
+[[:tum:|chiTumbuka]]&nbsp;·
+[[:ee:|Ɛʋɛ]]&nbsp;·
+[[:ff:|Fulfude]]&nbsp;·
+[[:ki:|Gĩkũyũ]]&nbsp;·
+[[:ha:|هَوُسَ]]&nbsp;·
+[[:ig:|Ìgbo]]&nbsp;·
+[[:xh:|isiXhosa]]&nbsp;·
+[[:zu:|isiZulu]]&nbsp;·
+[[:kr:|Kanuri]]&nbsp;·
+[[:rw:|Kinyarwanda]]&nbsp;·
+[[:rn:|Kirundi]]&nbsp;·
+[[:sw:|Kiswahili]]&nbsp;·
+[[:kg:|Kongo]]&nbsp;·
+[[:kj:|Kuanyama]]&nbsp;·
+[[:lg:|Luganda]]&nbsp;·
+[[:mg:|Malagasy]]&nbsp;·
+[[:mt:|Malti]]&nbsp;·
+[[:om:|Oromoo]]&nbsp;·
+[[:ng:|Oshiwambo]]&nbsp;·
+[[:hz:|Otsiherero]]&nbsp;·
+[[:sg:|Sängö]]&nbsp;·
+[[:st:|seSotho]]&nbsp;·
+[[:tn:|Setswana]]&nbsp;·
+[[:ss:|SiSwati]]&nbsp;·
+[[:so:|Soomaaliga]]&nbsp;·
+[[:ti:|ትግርኛ]]&nbsp;·
+[[:ve:|Tshivenda]]&nbsp;·
+[[:tw:|Twi]]&nbsp;·
+[[:wo:|Wolof]]&nbsp;·
+[[:ts:|Xitsonga]]&nbsp;·
+[[:yo:|Yorùbá]]&nbsp;·
+(For other large Wikipedias, look into the side-bar.)
+<!--
+Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre (langues locales et administratives africaines). Pour les autres langues (toujours sur la page principale): Template:Lonkásá ya libosó/Nkotá ya Wikipedia
 
+Please limit the links to other Wikipedias here to a small number: african local and administrative languages. For all other languages: Template:Lonkásá ya libosó/Nkotá ya Wikipedia
 
-<!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre (langues locales et administratives africaines). Pour les autres langues (toujours sur la page principale): Template:Lonkásá ya libosó/Nkotá ya Wikipedia -->
-<!-- Please limit the links to other Wikipedias here to a small number: african local and administratif languages. For all other languages: Template:Lonkásá ya libosó/Nkotá ya Wikipedia -->
-[[af:]] [[ak:]] [[am:]] [[ar:]] [[fr:]] [[en:]] [[eo:]] [[es:]] [[sw:]] [[ja:]] [[ka:]] [[ko:]] [[kg:]] [[nl:]] [[pt:]] [[simple:]] [[wo:]]
-
-__NOTOC__
+Interwikis to large Wikipedias (more that 10,000 articles) -->
+[[ar:]][[id:]][[ms:]][[bg:]][[ca:]][[cs:]][[da:]][[de:]][[et:]][[el:]][[en:]][[es:]][[eo:]][[fa:]][[fr:]][[gl:]][[ko:]][[he:]][[hr:]][[io:]][[is:]][[it:]][[lt:]][[hu:]][[nl:]][[ja:]][[no:]][[nn:]][[pl:]][[pt:]][[ro:]][[ru:]][[sk:]][[sl:]][[sr:]][[fi:]][[sv:]][[th:]][[tr:]][[uk:]][[zh:]]
