robot  Ajoute: io Modifie: bs, frp

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -16,7 +16,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[bm:Wikipedia]]
 [[bn:উইকিপিডিয়া]]
 [[br:Wikipedia]]
-[[bs:Wikipedija]]
+[[bs:Wikipedia]]
 [[ca:Viquipèdia]]
 [[ceb:Wikipedya]]
 [[chr:ᏫᎩᏇᏗᏯ]]
@@ -40,7 +40,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[fj:Wikipedia]]
 [[fo:Wikipedia]]
 [[fr:Wikipédia]]
-[[frp:Vouikipèdia]]
+[[frp:Vuiquipèdia]]
 [[fur:Vichipedie]]
 [[ga:Vicipéid]]
 [[gl:Wikipedia]]
@@ -55,6 +55,7 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[ia:Wikipedia]]
 [[id:Wikipedia]]
 [[ilo:Wikipedia]]
+[[io:Wikipedio]]
 [[is:Wikipedia]]
 [[it:Wikipedia]]
 [[ja:ウィキペディア]]
