*Empty MediaWiki Message*

--- a/Nyama.mw
+++ b/Nyama.mw
@@ -1,3 +1,4 @@
+'''Nyama''' (boyíké '''banyama''') ezalí ekelámo eye ezalí na [[lobíko]] mpé [[bomɔi]]. Biyíké bizalí [[Nyama ya mabɛ́lɛ|na mabɛ́lɛ]] mpé babótaka bǎna. Biyíké bisúsu bibimisaka [[líki|máki]].
 {{ndámbo}}
 
 == L ==
@@ -25,6 +26,5 @@
 [[nzoi]]
 [[nzoku]]
 
-
-
 [[Category:Nyama]]
+[[fr:Animal]]
