--- a/Kémi.mw
+++ b/Kémi.mw
@@ -1,3 +1,4 @@
+{{ndámbo}}
 '''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mayɛ́lɛ]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
 
 [[Category:Mayɛ́lɛ]]
