*Empty MediaWiki Message*

--- a/Kémi.mw
+++ b/Kémi.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-'''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mayɛ́lɛ]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
+'''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mambí]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
 
-[[Category:Mayɛ́lɛ]]
+[[Category:Mambí]]
 [[fr:Chimie]]
