*Empty MediaWiki Message*

--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -1,4 +1,7 @@
+{{ndámbo}}
 {{KimokristoS}}
+'''Biblíya''' ezalí [[búku]]  bya [[bakrístu]].
+
 [[Image:Bible.malmesbury.arp.jpg|right|450px|]]
 *[[Genese]] 
 *[[Exode]] 
