*Empty MediaWiki Message*

--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -1,8 +1,8 @@
 {{ndámbo}}
 {{KimokristoS}}
 '''Biblíya''' ezalí [[búku]]  bya [[bakrístu]].
+[[Image:Bible.malmesbury.arp.jpg|right|350px|]]
 
-[[Image:Bible.malmesbury.arp.jpg|right|450px|]]
 *[[Genese]] 
 *[[Exode]] 
 *[[Yobo]] 
@@ -30,4 +30,90 @@
 *[[Masese]] 
 
 [[Category:Boklísto]]
-[[en:Bible]]
+[[af:Bybel]]
+[[ar:الكتاب المقدس]]
+[[ast:Biblia]]
+[[zh-min-nan:Sèng-keng]]
+[[bg:Библия]]
+[[bn:বাইবেল]]
+[[br:Bibl]]
+[[bs:Biblija]]
+[[ca:Bíblia]]
+[[cs:Bible]]
+[[cy:Y Beibl]]
+[[da:Bibelen]]
+[[pdc:Biwwel]]
+[[de:Bibel]]
+[[el:Αγία Γραφή]]
+[[eo:Biblio]]
+[[es:Biblia]]
+[[et:Piibel]]
+[[eu:Biblia]]
+[[fa:انجیل]]
+[[fi:Raamattu]]
+[[fj:Ai Vola Tabu]]
+[[fr:Bible]]
+[[gl:Biblia]]
+[[ha:Baibûl]]
+[[he:תנ"ך]]
+[[ho:Baibel]]
+[[hr:Biblija]]
+[[hu:Biblia]]
+[[ht:Bib]]
+[[hz:Ombeibela]]
+[[ia:Biblia]]
+[[id:Alkitab]]
+[[ilo:Biblia]]
+[[io:Biblo]]
+[[is:Biblían]]
+[[it:Bibbia]]
+[[ja:聖書]]
+[[ko:성서]]
+[[kg:Biblia]]
+[[ku:Încîl]]
+[[kw:Bibel]]
+[[la:Biblia]]
+[[lad:Biblia]]
+[[lb:Bibel]]
+[[lg:Baibuli]]
+[[li:Biebel]]
+[[lt:Biblija]]
+[[mk:Библија]]
+[[ml:ബൈബിള്‍]]
+[[mn:Библи Cудар]]
+[[ms:Bible]]
+[[mt:Bibbja]]
+[[na:Bibel]]
+[[nds:Bibel]]
+[[ng:Ombimbeli]]
+[[nl:Bijbel (algemeen)]]
+[[nn:Bibelen]]
+[[no:Bibelen]]
+[[nrm:Bibl'ye]]
+[[pap:Bijbel]]
+[[pl:Biblia]]
+[[pt:Bíblia]]
+[[ro:Biblia]]
+[[ru:Библия]]
+[[rw:Bibiliya]]
+[[scn:Bibbia cristiana]]
+[[sg:Bible]]
+[[sh:Biblija]]
+[[simple:Bible]]
+[[sk:Biblia]]
+[[sl:Biblija]]
+[[sm:Ole Tusipala]]
+[[sr:Свето Писмо]]
+[[st:Bibele]]
+[[su:Alkitab]]
+[[sv:Bibeln]]
+[[tl:Biblia]]
+[[tpi:Baibel]]
+[[tr:Kitab-ı Mukaddes]]
+[[tt:İzge yazu]]
+[[ug:كذتذبعم]]
+[[uk:Біблія]]
+[[vi:Kinh thánh]]
+[[yo:Bíbélì Mimọ]]
+[[zh:聖經]]
+[[zu:IBhayibheli]]
