--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -28,6 +28,12 @@
 
 <!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre (langues locales et administratives africaines). Pour les autres langues (toujours sur la page principale): Template:Lonkásá ya libosó/Nkotá ya Wikipedia -->
 <!-- Please limit the links to other Wikipedias here to a small number: african local and administratif languages. For all other languages: Template:Lonkásá ya libosó/Nkotá ya Wikipedia -->
-[[af:]] [[ak:]] [[am:]] [[ar:]] [[fr:]] [[en:]] [[eo:]] [[es:]] [[sw:]] [[ja:]] [[ka:]] [[ko:]] [[kg:]] [[nl:]] [[pt:]] [[simple:]] [[wo:]]
+
+<!-- Langues locales -- local languages--> 
+[[af:]] [[ak:]] [[am:]] [[ar:]] [[sw:]] [[ka:]] [[kg:]] [[wo:]]
+
+<!-- langues administratifs -- administratif languages -->
+<!-- nl = flamand (Congo Belge) -- nl = flemish (Belgian Congo) -->
+[[fr:]] [[en:]] [[simple:]] [[es:]] [[nl:]] [[pt:]]
 
 __NOTOC__
