*Empty MediaWiki Message*

--- a/Biblíya.mw
+++ b/Biblíya.mw
@@ -29,7 +29,7 @@
 *[[Baebele]]
 *[[Masese]] 
 
-==Búku==
+==Babúku==
 *Biblíya  	ISBN 0966843302  	 	  	
 *Biblíya        ISBN 9966-40-879-7 ABRDC-ABU, 2004
 *Mokanda na Kondimana na Sika na nkolo na biso Yesu Masiya - Njembo     ISBN 9966-40-110-5 SBRDC-ABU, 2000
