--- a/Kémi.mw
+++ b/Kémi.mw
@@ -1,5 +1,7 @@
 {{ndámbo}}
 '''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mambí]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
+Lisusu, ezali mayebi etali lolege bilɔ́kɔ ezali kokangama yango na yango, mpe lolenge ezali kobongwana.<br> Ba [[atome]] ezali kokangama mpo ya kotonga ba [[molékili]].<br>nd.<br><center> 2H<sub>2</sub> + O<sub>2</sub> ----> 2H<sub>2</sub>O </center>
+[[mokokano]] ya kosala [[mái]]. 
 
 [[Category:Mambí]]
 [[fr:Chimie]]
