*Empty MediaWiki Message*

--- a/Proton.mw
+++ b/Proton.mw
@@ -1,1 +1,2 @@
-Proton éteni ya [[atome]] ézali na kati ya [[mokɔkɔli]]. Ezali na mokúmba(charge /sharje/) ya bobakisa(positive "+" ): e = 1,602 189 <small>×</small>10<sup>-19</sup> C ekokani na mokúmba ya eléktron kasi ya molongola(negative "-". Masi na yango (bozito*) ézali m<sub>p</sub> = 1,672 65 <small>×10</small><sup>-27</sup> kg.
+Proton éteni ya [[atome]] ézali na kati ya [[mokɔkɔli]]. Ezali na mokúmba(charge /sharje/) ya bobakisa(positive "+" ): e = 1,602 189 <small>×</small>10<sup>-19</sup> C ekokani na mokúmba ya eléktron kasi ya molongola(negative "-"). Masi na yango (bozito*, kilo**) ézali m<sub>p</sub> = 1,672 65 <small>×10</small><sup>-27</sup> kg.
+<br><br><br><smal>*bozito: elakisi "poids" kasi fizika elobi te "poids" na "masse" ezali eloko moko te!!!</small><br> **kilo: ezali moyoko(unité) te kasi lingala ekomisa yango moyako lokola "gramme" oyo esengeli kozala.</small>
