--- a/Atome.mw
+++ b/Atome.mw
@@ -1,1 +1,1 @@
-Atome: (eúti epái ya ba Greki '''ατομος''' elakisi "oyo bakoki kokabola te".)<br> [[Kémi]] elóbi te atome ézali eténi ya suka ya muké óyo ekɔ́ki kokangama na eténi musúsu.<br><br>Kasi atome ézali mpe na biténi nayango. Biténi yango ebengami: [[eléktron]], [[proton]] na [[netron]]. Ba netron na ba proton ézali nakáti ya [[mokɔkɔli]]. Ba eléktron kasí bizali kobaluka na libándá ya mokɔkɔli.
+Atome: (eúti epái ya ba Greki '''ατομος''' elakisi "oyo bakoki kokabola te".)<br> [[Kémi]] elóbi te atome ézali eténi ya suka ya muké óyo ekɔ́ki kokangama na eténi musúsu.<br><br>Kasi atome ézali mpe na biténi nayango. Biténi yango ebengami: [[eléktron]], [[proton]] na [[netron]]. Ba netron na ba proton ézali nakáti ya [[mokɔkɔli]]. Ba eléktron kasí bazali kobaluka na libándá ya mokɔkɔli.
