--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -30,10 +30,10 @@
 <!-- Please limit the links to other Wikipedias here to a small number: african local and administratif languages. For all other languages: Template:Lonkásá ya libosó/Nkotá ya Wikipedia -->
 
 <!-- Langues locales -- local languages--> 
-[[am:]] [[ar:]] [[af:]] [[ak:]] [[am:]] [[ar:]] [[sw:]] [[ka:]] [[kg:]] [[ko:]] [[wo:]]
+[[am:]] [[af:]] [[ak:]] [[sw:]] [[ka:]] [[kg:]] [[wo:]]
 
 <!-- langues administratifs -- administratif languages -->
 <!-- nl = flamand (Congo Belge) -- nl = flemish (Belgian Congo) -->
-[[am:]] [[ar:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[ko:]] [[nl:]] [[pt:]]
+[[ar:]] [[az:]] [[fr:]] [[en:]] [[simple:]] [[es:]] [[ko:]] [[nl:]] [[pt:]] [[tr:]]
 
 __NOTOC__
