--- a/Kémi.mw
+++ b/Kémi.mw
@@ -5,4 +5,5 @@ Lisusu, ezali mayebi etali lolege bilɔ́kɔ ezali kokangama yango na yango, mpe
 <br>nd. : ndakisa (exemple)
 
 [[Category:Mambí]]
+[[Category:Kémi]]
 [[fr:Chimie]]
