--- a/Tableau_periodique.mw
+++ b/Tableau_periodique.mw
@@ -274,8 +274,82 @@ NB : les noms suivis d'un point d'interrogation sont des approximations, il faud
 | bgcolor="#ffff99" align="center"|[[halogène]]s
 | bgcolor="#c0ffff" align="center"|[[gaz rare]]s
 |}
-NB : à traduire
+'''NB : à traduire'''
 
 
 
 remerciements a moyogo(wiktionaire)
+
+
+[[category:Kémi]]
+
+[[af:Periodieke tabel]]
+[[als:Periodensystem]]
+[[ar:جدول دوري]]
+[[ast:Tabla periódica]]
+[[be:Перыядычная сістэма элементаў]]
+[[bg:Периодична таблица]]
+[[br:Taolenn beriodek an elfennoù]]
+[[bs:Periodni sistem elemenata]]
+[[ca:Taula periòdica]]
+[[cs:Periodická tabulka]]
+[[cy:Tabl Cyfnodol]]
+[[da:Det periodiske system]]
+[[de:Periodensystem]]
+[[el:Περιοδικός πίνακας των χημικών στοιχείων]]
+[[en:Periodic table]]
+[[eo:Perioda tabelo]]
+[[es:Tabla periódica de los elementos]]
+[[et:Keemiliste elementide perioodilisussüsteem]]
+[[eu:Elementuen sailkapen periodiko]]
+[[fa:جدول تناوبی (استاندارد)]]
+[[fi:Alkuaineiden jaksollinen järjestelmä]]
+[[fo:Skeiðbundna skipanin]]
+[[fur:Tabele periodiche]]
+[[ga:Tábla peiriadach]]
+[[gl:Táboa periódica dos elementos]]
+[[gu:આવર્ત કોષ્ટક]]
+[[he:הטבלה המחזורית]]
+[[hr:Periodni sustav elemenata]]
+[[hu:Periódusos rendszer]]
+[[ia:Tabella periodic del elementos]]
+[[id:Tabel periodik]]
+[[io:Periodala tabelo dil elementaro]]
+[[is:Lotukerfið]]
+[[it:Tavola periodica]]
+[[ja:周期表]]
+[[ka:ქიმიურ ელემენტთა პერიოდული სისტემა]]
+[[ko:주기율표]]
+[[ku:Tabloya periyodîk a elementan]]
+[[la:Systema Periodicum]]
+[[lb:Periodesystem vun den Elementer]]
+[[li:Periodiek systeem vaan elemente]]
+[[lt:Periodinė elementų lentelė]]
+[[lv:Ķīmisko elementu periodiskā tabula]]
+[[mi:Ripanga pūmotu]]
+[[mk:Периоден систем]]
+[[ms:Jadual berkala]]
+[[nds:Periodensysteem]]
+[[nl:Periodiek systeem]]
+[[nn:Periodesystemet]]
+[[no:Periodesystemet]]
+[[pl:Układ okresowy pierwiastków]]
+[[pt:Tabela periódica]]
+[[ro:Tabelul periodic al elementelor]]
+[[ru:Периодическая система элементов]]
+[[sh:Periodni sistem elemenata]]
+[[simple:Periodic table]]
+[[sk:Periodická tabuľka]]
+[[sl:Periodni sistem elementov]]
+[[sr:Периодни систем елемената]]
+[[su:Tabel periodik]]
+[[sv:Periodiska systemet]]
+[[ta:ஆவர்த்தன அட்டவணை]]
+[[th:ตารางธาตุ]]
+[[tl:Talaang peryodiko]]
+[[tr:Periyodik cetvel]]
+[[uk:Періодична система елементів]]
+[[vi:Bảng tuần hoàn]]
+[[wa:Tåvlea periodike des elemints]]
+[[zh:元素周期表]]
+[[zh-yue:元素週期表]]
