--- a/Atome.mw
+++ b/Atome.mw
@@ -1,1 +1,69 @@
 Atome: (eúti epái ya ba Greki '''ατομος''' elakisi "oyo bakoki kokabola te".)<br> [[Kémi]] elóbi te atome ézali eténi ya suka ya muké óyo ekɔ́ki kokangama na eténi musúsu.<br><br>Kasi atome ézali mpe na biténi nayango. Biténi yango ebengami: [[eléktron]], [[proton]] na [[netron]]. Ba netron na ba proton ézali nakáti ya [[mokɔkɔli]]. Ba eléktron kasí bazali kobaluka na libándá ya mokɔkɔli.
+
+
+
+[[Category:Atome]]
+
+[[af:Atoom]]
+[[an:Atomo]]
+[[ar:ذرة]]
+[[ast:Átomu]]
+[[bg:Атом]]
+[[br:Atom]]
+[[bs:Atom]]
+[[bug:Atong]]
+[[ca:Àtom]]
+[[cs:Atom]]
+[[da:Atom]]
+[[de:Atom]]
+[[el:Άτομο]]
+[[en:Atom]]
+[[eo:Atomo]]
+[[es:Átomo]]
+[[et:Aatom]]
+[[eu:Atomo]]
+[[fa:اتم]]
+[[fi:Atomi]]
+[[fo:Atom]]
+[[gl:Átomo]]
+[[he:אטום]]
+[[hr:Atom]]
+[[hu:Atom]]
+[[ia:Atomo]]
+[[id:Atom]]
+[[io:Atomo]]
+[[is:Frumeind]]
+[[it:Teoria atomica]]
+[[ja:原子]]
+[[jbo:ratni]]
+[[ka:ატომი]]
+[[kn:ಅಣು]]
+[[ko:원자]]
+[[la:Atomus]]
+[[lt:Atomas]]
+[[lv:Atoms]]
+[[mk:Атом]]
+[[ms:Atom]]
+[[nds:Atom]]
+[[nl:Atoom]]
+[[nn:Atom]]
+[[no:Atom]]
+[[pl:Atom]]
+[[pt:Átomo]]
+[[ro:Atom]]
+[[ru:Атом]]
+[[sh:Atom]]
+[[simple:Atom]]
+[[sk:Atóm]]
+[[sl:Atom]]
+[[sr:Атом]]
+[[su:Atom]]
+[[sv:Atom]]
+[[ta:அணு]]
+[[th:อะตอม]]
+[[tl:Atomo]]
+[[tr:Atom]]
+[[uk:Атом]]
+[[vi:Nguyên tử]]
+[[yi:אטאם]]
+[[zh:原子]]
