--- a/Mokókóló_mwa_atome.mw
+++ b/Mokókóló_mwa_atome.mw
@@ -1,1 +1,54 @@
-Mokɔkɔli(kemi) ézali eténi ya [[atome]] na kati na yango ba [[proton]] na ba [[netron]] ézali. Bonéne ya atome na masi na yango penepene ézali nionso na kati ya mokɔkɔli.
+'''Mokɔkɔli''' ([[kémi]]) ézali eténi ya [[atome]] na kati na yango ba [[proton]] na ba [[netron]] ézali. Bonéne ya atome na masi na yango penepene ézali nionso na kati ya mokɔkɔli.
+
+
+
+[[Category:Kémi]]
+
+[[af:Molekule]]
+[[als:Molekül]]
+[[ar:جزيء]]
+[[bg:Молекула]]
+[[ca:Molècula]]
+[[cs:Molekula]]
+[[da:Molekyle]]
+[[de:Molekül]]
+[[el:Μόριο]]
+[[en:Molecule]]
+[[eo:Molekulo]]
+[[es:Molécula]]
+[[et:Molekul]]
+[[fi:Molekyyli]]
+[[fo:Mýl]]
+[[gl:Molécula]]
+[[he:מולקולה]]
+[[hr:Molekula]]
+[[hu:Molekula]]
+[[id:Molekul]]
+[[io:Molekulo]]
+[[is:Sameind]]
+[[it:Molecola]]
+[[ja:分子]]
+[[ko:분자]]
+[[lt:Molekulė]]
+[[lv:Molekula]]
+[[mk:Молекула]]
+[[nds:Molekül]]
+[[nl:Molecuul]]
+[[nn:Molekyl]]
+[[no:Molekyl]]
+[[pl:Cząsteczka]]
+[[pt:Molécula]]
+[[ru:Молекула]]
+[[sh:Molekula]]
+[[simple:Molecule]]
+[[sk:Molekula]]
+[[sl:Molekula]]
+[[sr:Молекул]]
+[[su:Molekul]]
+[[sv:Molekyl]]
+[[th:โมเลกุล]]
+[[tl:Molekula]]
+[[tr:Molekül]]
+[[uk:Молекула]]
+[[vi:Phân tử]]
+[[zh:分子]]
