--- a/Proton.mw
+++ b/Proton.mw
@@ -1,2 +1,66 @@
 Proton éteni ya [[atome]] ézali na kati ya [[mokɔkɔli]]. Ezali na mokúmba(charge /sharje/) ya bobakisa(positive "+" ): e = 1,602 189 <small>×</small>10<sup>-19</sup> C ekokani na mokúmba ya eléktron kasi ya molongola(negative "-"). Masi na yango (bozito*, kilo**) ézali m<sub>p</sub> = 1,672 65 <small>×10</small><sup>-27</sup> kg.
 <br><br><br><small>*bozito: elakisi "poids" kasi fizika elobi te "poids" na "masse" ezali eloko moko te!!!</small><br><small> **kilo: ezali moyoko(unité) te kasi lingala ekomisa yango moyoko lokola "gramme" oyo esengeli kozala.</small>
+
+==Tála mpé==
+[[Atome]]
+
+
+
+
+[[Category:Kémi]]
+
+[[af:Proton]]
+[[ar:بروتون]]
+[[bg:Протон]]
+[[br:Proton]]
+[[bs:Proton]]
+[[ca:Protó]]
+[[cs:Proton]]
+[[da:Proton]]
+[[de:Proton]]
+[[el:Πρωτόνιο]]
+[[en:Proton]]
+[[eo:Protono]]
+[[es:Protón]]
+[[fa:پروتون]]
+[[fi:Protoni]]
+[[fr:Proton]]
+[[ga:Prótón]]
+[[gl:Protón]]
+[[he:פרוטון]]
+[[hr:Proton]]
+[[hu:Proton]]
+[[ia:Proton]]
+[[id:Proton]]
+[[io:Protono]]
+[[is:Róteind]]
+[[it:Protone]]
+[[ja:陽子]]
+[[ko:양성자]]
+[[la:Proton]]
+[[lt:Protonas]]
+[[lv:Protons]]
+[[mk:Протон]]
+[[ms:Proton]]
+[[nds:Proton]]
+[[nl:Proton (deeltje)]]
+[[nn:Proton]]
+[[no:Proton]]
+[[pl:Proton]]
+[[pt:Próton]]
+[[ro:Proton]]
+[[ru:Протон]]
+[[scn:Prutoni]]
+[[sh:Proton]]
+[[simple:Proton]]
+[[sk:Protón]]
+[[sl:Proton]]
+[[sr:Протон]]
+[[su:Proton]]
+[[sv:Proton]]
+[[ta:புரோத்தன்]]
+[[th:โปรตอน]]
+[[tr:Proton]]
+[[uk:Протон]]
+[[vi:Proton]]
+[[zh:質子]]
