--- a/Netron.mw
+++ b/Netron.mw
@@ -1,1 +1,52 @@
-Netron ézali etani ya [[atome]] óyo yango na [[proton]] evandi o kati ja [[mokɔkɔli]]. Ezali na mokúmba te. Masi na yango ezali: m<sub>n</sub> = 1,674 95 <small>×</small>10<sup>-27</sup> kg.
+'''Netron''' ézali etani ya [[atome]] óyo yango na [[proton]] evandi o kati ja [[mokɔkɔli]]. Ezali na mokúmba te. Masi na yango ezali: m<sub>n</sub> = 1,674 95 <small>×</small>10<sup>-27</sup> kg.
+
+
+
+[[Category:Atome]]
+[[Category:Kémi]]
+
+[[af:Neutron]]
+[[ar:نيوترون]]
+[[bg:Неутрон]]
+[[br:Neutron]]
+[[bs:Neutron]]
+[[bug:Neutron]]
+[[ca:Neutró]]
+[[cs:Neutron]]
+[[de:Neutron]]
+[[el:Νετρόνιο]]
+[[en:Neutron]]
+[[eo:Neŭtrono]]
+[[es:Neutrón]]
+[[fi:Neutroni]]
+[[gl:Neutrón]]
+[[he:נייטרון]]
+[[hr:Neutron]]
+[[hu:Neutron]]
+[[id:Neutron]]
+[[io:Neutrono]]
+[[is:Nifteind]]
+[[it:Neutrone]]
+[[ja:中性子]]
+[[ko:중성자]]
+[[la:Neutron]]
+[[lt:Neutronas]]
+[[lv:Neitrons]]
+[[mk:Неутрон]]
+[[nds:Neutron]]
+[[nl:Neutron]]
+[[nn:Nøytron]]
+[[no:Nøytron]]
+[[pl:Neutron]]
+[[pt:Nêutron]]
+[[ro:Neutron]]
+[[ru:Нейтрон]]
+[[sh:Neutron]]
+[[simple:Neutron]]
+[[sk:Neutrón]]
+[[sl:Nevtron]]
+[[sr:Неутрон]]
+[[sv:Neutron]]
+[[th:นิวตรอน]]
+[[uk:Нейтрон]]
+[[zh:中子]]
