--- a/Eléktron.mw
+++ b/Eléktron.mw
@@ -1,1 +1,58 @@
-Eléktron ezali eténi ya atome óyo ezali nalibándá. Ezali kobaluka nalibanda ya [[mokɔkɔli]]. <br>Elektron ezali na mokúmba ya molongola (negative "-") e = -1,602 189 <small>×</small>10<sup>-19</sup> C . Masi na yango ezali m<sub>e</sub> = 9,109 53 <small>×</small>10<sup>-31</sup> kg. Mokúmba na yango ezali ndege moko na óyo ya [[proton]] kasi elembo ekeseni.
+'''Eléktron''' ezali eténi ya [[atome]] óyo ezali nalibándá. Ezali kobaluka nalibanda ya [[mokɔkɔli]]. <br>Elektron ezali na mokúmba ya molongola (negative "-") e = -1,602 189 <small>×</small>10<sup>-19</sup> C . Masi na yango ezali m<sub>e</sub> = 9,109 53 <small>×</small>10<sup>-31</sup> kg. Mokúmba na yango ezali ndege moko na óyo ya [[proton]] kasi elembo ekeseni.
+
+
+
+[[Category:Atome]]
+
+[[af:Elektron]]
+[[ar:إلكترون]]
+[[ast:Electrón]]
+[[bg:Електрон]]
+[[br:Elektron]]
+[[bs:Elektron]]
+[[bug:Elektron]]
+[[ca:Electró]]
+[[cs:Elektron]]
+[[da:Elektron]]
+[[el:Ηλεκτρόνιο]]
+[[en:Electron]]
+[[eo:Elektrono]]
+[[es:Electrón]]
+[[et:Elektron]]
+[[fa:الکترون]]
+[[fi:Elektroni]]
+[[fr:Électron]]
+[[ga:Leictreon]]
+[[gl:Electrón]]
+[[he:אלקטרון]]
+[[hr:Elektron]]
+[[hu:Elektron]]
+[[ia:Electron]]
+[[id:Elektron]]
+[[io:Elektrono]]
+[[is:Rafeind]]
+[[it:Elettrone]]
+[[ja:電子]]
+[[ko:전자]]
+[[la:Electron]]
+[[lt:Elektronas]]
+[[lv:Elektrons]]
+[[mk:Електрон]]
+[[nds:Elektron]]
+[[nl:Elektron]]
+[[nn:Elektron]]
+[[no:Elektron]]
+[[pl:Elektron]]
+[[pt:Elétron]]
+[[ro:Electron]]
+[[ru:Электрон]]
+[[simple:Electron]]
+[[sk:Elektrón]]
+[[sl:Elektron]]
+[[sr:Електрон]]
+[[su:Éléktron]]
+[[sv:Elektron]]
+[[th:อิเล็กตรอน]]
+[[tr:Elektron]]
+[[vi:Điện tử]]
+[[zh:电子]]
