--- a/Mokokano.mw
+++ b/Mokokano.mw
@@ -1,2 +1,16 @@
-Mokokano ya [[kémi]]( na lifalanse: '''équation chimimique''') ézali kolakisa bobongwani ya biloko. <br>Bikokano* ezali ebele.
+'''Mokokano''' ya [[kémi]]( na lifalanse: ''équation chimique'') ézali kolakisa bobongwani ya biloko. <br>Bikokano* ezali ebele.
 <br><br><br><small>*mokokano: équation, ekeseni na bokokani: égalité</small>
+
+
+[[Category:Kémi]]
+
+[[de:Reaktionsgleichung]]
+[[en:Chemical equation]]
+[[es:Ecuación química]]
+[[fr:Équation chimique]]
+[[hu:Kémiai egyenlet]]
+[[it:Equazione chimica]]
+[[ja:化学反応式]]
+[[simple:Chemical equation]]
+[[tl:Ekwasyong kimikal]]
+[[uk:Хімічне рівняння]]
