*Empty MediaWiki Message*

--- a/Atome.mw
+++ b/Atome.mw
@@ -1,6 +1,6 @@
-Atome: (eúti epái ya ba Greki '''ατομος''' elakisi "oyo bakoki kokabola te".)<br> [[Kémi]] elóbi te atome ézali eténi ya suka ya muké óyo ekɔ́ki kokangama na eténi musúsu.<br><br>Kasi atome ézali mpe na biténi nayango. Biténi yango ebengami: [[eléktron]], [[proton]] na [[netron]]. Ba netron na ba proton ézali nakáti ya [[mokɔkɔli]]. Ba eléktron kasí bazali kobaluka na libándá ya mokɔkɔli.
+Atome: (eúti epái ya ba [[Greki]] ''ατομος'' elakisi «óyo bakokí kokabola tɛ́».)<br> [[Kémi]] elobí ’te atome ezalí eténi ya suka ya mokɛ́ óyo ekɔ́kí kokangama na eténi mosúsu.
 
-
+Kasi atome ezalí mpé na biténi na yangó. Biténi yangó ebengamí : [[eléktron]], [[proton]] na [[netron]]. Banetron na ba proton ézali na káti ya [[mokɔkɔli]]. Baeléktron kasi bazalí kobaluka na libándá ya mokɔkɔli.
 
 [[Category:Atome]]
 
