--- a/Mokókóló_mwa_atome.mw
+++ b/Mokókóló_mwa_atome.mw
@@ -1,54 +1,39 @@
-'''Mokɔkɔli''' ([[kémi]]) ézali eténi ya [[atome]] na kati na yango ba [[proton]] na ba [[netron]] ézali. Bonéne ya atome na masi na yango penepene ézali nionso na kati ya mokɔkɔli.
-
-
+'''Mokókóló''' tǒ mokókóli ([[kémi]]) ezalí eténi ya [[atome]] na káti na yangó [[proton|baproton]] na [[netron|banetron]] ezalí. Bonɛ́nɛ ya atome na masi na yangó pɛnɛpɛnɛ ezalí nyɔ́nsɔ na káti ya mokókóló.
 
 [[Category:Kémi]]
 
-[[af:Molekule]]
-[[als:Molekül]]
-[[ar:جزيء]]
-[[bg:Молекула]]
-[[ca:Molècula]]
-[[cs:Molekula]]
-[[da:Molekyle]]
-[[de:Molekül]]
-[[el:Μόριο]]
-[[en:Molecule]]
-[[eo:Molekulo]]
-[[es:Molécula]]
-[[et:Molekul]]
-[[fi:Molekyyli]]
-[[fo:Mýl]]
-[[gl:Molécula]]
-[[he:מולקולה]]
-[[hr:Molekula]]
-[[hu:Molekula]]
-[[id:Molekul]]
-[[io:Molekulo]]
-[[is:Sameind]]
-[[it:Molecola]]
-[[ja:分子]]
-[[ko:분자]]
-[[lt:Molekulė]]
-[[lv:Molekula]]
-[[mk:Молекула]]
-[[nds:Molekül]]
-[[nl:Molecuul]]
-[[nn:Molekyl]]
-[[no:Molekyl]]
-[[pl:Cząsteczka]]
-[[pt:Molécula]]
-[[ru:Молекула]]
-[[sh:Molekula]]
-[[simple:Molecule]]
-[[sk:Molekula]]
-[[sl:Molekula]]
-[[sr:Молекул]]
-[[su:Molekul]]
-[[sv:Molekyl]]
-[[th:โมเลกุล]]
-[[tl:Molekula]]
-[[tr:Molekül]]
-[[uk:Молекула]]
-[[vi:Phân tử]]
-[[zh:分子]]
+[[ar:نواة ذرة]]
+[[bg:Атомно ядро]]
+[[br:Nukleüs (an atomoù)]]
+[[ca:Nucli atòmic]]
+[[cs:Atomové jádro]]
+[[da:Atomkerne]]
+[[de:Atomkern]]
+[[en:Atomic nucleus]]
+[[eo:Atomkerno]]
+[[es:Núcleo atómico]]
+[[et:Aatomituum]]
+[[fa:هسته اتم]]
+[[he:גרעין האטום]]
+[[hu:Atommag]]
+[[ia:Nucleo atomic]]
+[[id:Inti atom]]
+[[is:Frumeindakjarni]]
+[[it:Nucleo atomico]]
+[[ja:原子核]]
+[[ko:원자핵]]
+[[la:Nucleus atomi]]
+[[lt:Atomo branduolys]]
+[[nl:Atoomkern]]
+[[nn:Atomkjerne]]
+[[no:Atomkjerne]]
+[[pl:Jądro atomowe]]
+[[pt:Núcleo atómico]]
+[[ru:Атомное ядро]]
+[[sk:Atómové jadro]]
+[[sl:Atomsko jedro]]
+[[sv:Atomkärna]]
+[[th:นิวเคลียสอะตอม]]
+[[uk:Ядро (атома)]]
+[[vi:Hạt nhân]]
+[[zh:原子核]]
